Extend logging for password manager internals page

This CL adds logging for the internals page during filling passwords in the
renderer code. Those have been missing and would have been helpful for
investigating the associated bug.

BUG=606736

Review URL: https://codereview.chromium.org/1918823005

Cr-Commit-Position: refs/heads/master@{#389810}

Former-commit-id: 4b06ffc533f2c176a235caa7ef0e0975b3c6f4c3